objects/Community_Profile__c.object
<CustomObject>
    <description>This object describes the &quot;role&quot; or persona of the Contact when logged into the Community.  It allows the org to store varying data for different roles or types.</description>
    <fields>
        <fullName>About_Me__c</fullName>
        <label>About Me</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Advisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Allows a Community Profile to have a designated Advisor contact.</description>
        <label>Advisor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Community Profiles (Advisor)</relationshipLabel>
        <relationshipName>Community_Profiles1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Career_Interests__c</fullName>
        <label>Career Interests</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Contact that is associated with this Community Profile record.  A Contact may have multiple Community Profiles (one for each role)</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Community Profiles</relationshipLabel>
        <relationshipName>Community_Profiles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email address for profile</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Favorite_Classes_to_Teach__c</fullName>
        <label>Favorite Classes to Teach</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LinkedIn_Profile__c</fullName>
        <label>LinkedIn Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Office_Hours__c</fullName>
        <description>Office hours for community profile</description>
        <label>Office Hours</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Office_Location__c</fullName>
        <label>Office Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office__c</fullName>
        <label>Office #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_date_field_1_DNU__c</fullName>
        <label>Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_long_area_field_1_DNU__c</fullName>
        <label>What I do for fun</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_picklist_field_1_DNU__c</fullName>
        <label>Favorite Color</label>
        <picklist>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Black</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chartreuse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuscia</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_text_field_1_DNU__c</fullName>
        <label>Test text field 1 DNU</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_I_did_last_summer_vacation__c</fullName>
        <label>What I did last summer vacation</label>
        <type>TextArea</type>
    </fields>
    <label>Community Profile</label>
    <nameField>
        <displayFormat>CP-{00000}</displayFormat>
        <label>Community Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Community Profiles</pluralLabel>
    <recordTypes>
        <fullName>Alumni</fullName>
        <active>true</active>
        <description>To be used to capture fields for an Alumni Community Profile</description>
        <label>Alumni</label>
    </recordTypes>
    <recordTypes>
        <fullName>FacultyStaff</fullName>
        <active>true</active>
        <description>To be used to capture fields for a Faculty/Staff Community Profile</description>
        <label>Faculty/Staff</label>
    </recordTypes>
    <recordTypes>
        <fullName>Student</fullName>
        <active>true</active>
        <description>To be used to capture fields for a Student Community Profile</description>
        <label>Student</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>